Distributed classes to different files, changed objects to defined types

--- a/Patterns/Lab1/Lab1/Lab1.csproj
+++ b/Patterns/Lab1/Lab1/Lab1.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BankomatHandler.cs" />
+    <Compile Include="BankomatHandlerClass.cs" />
+    <Compile Include="MoneyHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
